Fix typo in package

--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "license": "license",
     "authors": [
         {
-            "name": "author name",
-            "email": "author email",
-            "homepage": "author homepage"
+            "name": "Muhammad Ezha Syafaat",
+            "email": "muhammadezhasyafaat08@gmail.com",
+            "homepage": "https://ezhasyafaat.github.io/ezhxx"
         }
     ],
     "homepage": "https://github.com/ezha/indomonth",
