update composer json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "ezha/indomonth",
-    "description": ":package_description",
+    "description": "IndoMonth",
     "license": "license",
     "authors": [
         {
