--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ezha/indomonth",
     "description": "IndoMonth",
-    "license": "license",
+    "license": "MIT",
     "authors": [
         {
             "name": "Muhammad Ezha Syafaat",
